# bot

./: .gitignore  LICENSE  README.md  __main__.py  config_defaults.json  pyproject.toml  tox.ini
.github/workflows/: codeql-analysis.yml  lint.yml
bot/: __main__.py
bot/exts/: admin.py  error_handler.py  events.py  fun.py  help.py  info.py  math.py  stats.py  text.py  utils.py  web.py
exts/: admin.py  debug.py  error_handler.py  errorhdrl.py  fun.py  info.py  stats.py  text.py  utils.py  web.py
