[tool.poetry]
name = "bot"
version = "0.1.0"
description = "A simple bot made for the Créu Cat community"
authors = ["Sofia \"dzshn\" N. L. <zshn@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.2"
psutil = "^5.8.0"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
